# AI-Marketing-Assistant

./: .env.example  .env.railway.template  .gitignore  .vercelignore  AI_IMPLEMENTATION_COMPLETE_SUMMARY.md  AI_INTEGRATION_COMPLETE.md  AI_PROMPT_ARCHITECTURE_IMPLEMENTED.md  API_CONTRACT_FINALIZATION_COMPLETE.md  COMPLETE_API_CONTRACT_INTEGRATION.md  COMPREHENSIVE_FIXES_COMPLETE.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FRONTEND_API_CONTRACT_INTEGRATION.md  GEMINI_AGENT_INTEGRATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  INFRASTRUCTURE_IMPLEMENTATION_COMPLETE.md  Procfile  QUICK_START_GUIDE.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_QUICK_START.md  README.md  SERVERS_RUNNING_SUCCESSFULLY.md  SSO_IMPLEMENTATION_COMPLETE.md  SYSTEM_ARCHITECTURE_COMPLETE.md  UI_FEATURES_INTEGRATION_COMPLETE.md  aimarketing.db  docker-compose.yml  railway.toml  railway_helper.py  requirements.txt  start_all_services.ps1  test_services.ps1  vercel.json
api/: index.py
ux design/: API_IMPLEMENTATION_SUMMARY.md  BUG_FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  RESPONSIVE-GUIDE.md  RESPONSIVE-IMPROVEMENTS.md  clear-auth.html  config.js  database-manager.html  debug.js  index.html  integration-test.html  landing.html  login-sso.html  login.html  pyproject.toml  requirements.txt  server.py  test-api-contract.html  test-auth.html  test-demo.html  test.html  vercel.json  web.py
ux design/css/: style.css
ux design/js/: ai-chat-panel.js  ai-prompt-engine.js  ai-service-old.js  ai-service.js  analytics-dashboard.js  api-contract.js  api.js  app.js  auth-sso.js  auth.js  config.js  debug.js  (+3 more)
(+81 files in other folders)
